--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
     </div>
     <div class="controls">
       <div class="selectors">
-        <div class="selector-div selector-active"></div>
-        <div class="selector-div "></div>
-        <div class="selector-div"></div>
+        <div class="services-indicators-div selector-active"></div>
+        <div class="services-indicators-div"></div>
+        <div class="services-indicators-div"></div>
       </div>
       <div class="arrows">
         <div id="arrow-left">
