fixed sizing problems

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </div>
     </div>
     <div class="ready-background">
-      <svg width="375" height="365" viewBox="0 0 375 365" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg width="375" height="365" viewBox="0 0 375 365" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
         <path d="M2.32326e-05 365L375 365L375 20.4776C370.968 20.4776 354.489 34.9199 333.261 31.1369C306.726 26.4082 249.228 -23.4797 168.099 13.6415C98.8742 45.3157 35.5469 31.137 0 20.4776L2.32326e-05 365Z" fill="#ECE1FD"/>
         </svg>
         
