started media queries

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link id="css" rel="stylesheet" href="css/mobile-styles.css">
+    <link id="css" rel="stylesheet" href="css/home-styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Dela+Gothic+One&family=Montserrat:wght@100;200;300;400;600;700;900&display=swap" rel="stylesheet">
     <script
@@ -63,12 +63,18 @@
                     <p>Paint Paradise is a safe place for anyone who needs a creative outlet or would like to explore their inner artist!</p>
                 </div>
                 <div class="heading-button">
-                    <button>BOOK YOUR EVENT</button>
+                    <button class="purple-button">BOOK YOUR EVENT</button>
+                </div>
+                <div class="wave-2">
+                  <svg class="vector" width="375" height="475" viewBox="0 0 375 475" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+                    <path d="M0 0H375V465.896C370.968 465.896 354.489 446.922 333.261 451.892C306.726 458.104 249.359 500.64 168.229 451.871C99.0044 410.258 35.5469 423.29 0 437.294V0Z" fill="#ECE1FD"/>
+                    </svg>
+                      
                 </div>
                 <div class="wave">
-                  <svg width="440" height="55" viewBox="0 0 1440 570" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
-                    <path d="M0 0H1440V533.302C1424.52 533.302 1361.24 510.946 1279.72 516.802C1177.83 524.122 957.037 601.345 645.5 543.884C379.677 494.854 136.5 516.802 0 533.302V0Z" fill="#A9E7E2"/>
-                    </svg>
+                    <svg class="vector" width="375" height="456" viewBox="0 0 375 456" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+                      <path d="M0 0H375V430.417C370.968 430.417 354.489 412.374 333.261 417.1C306.726 423.008 249.228 485.334 168.099 438.957C98.8742 399.386 35.5469 417.1 0 430.417V0Z" fill="#A9E7E2"/>
+                      </svg>                     
                 </div>
             </div>
         </div>
@@ -117,45 +123,45 @@
         <div class="card-title">
           <h2>Private paint parties</h2>
         </div>
-        <div class="card-text">
+        <div class="service-card-text">
           <p>
-            Book a private paint party at our srudio or in your home/venue to
+            Book a private paint party at our studio or in your home/venue to
             celebrate any event such as birthdays, bacholerette parties, tea
             parties, chidren’s parties, corporate events and more!
           </p>
         </div>
         <div class="card-button">
-          <button>Learn more</button>
+          <button class="purple-button">LEARN MORE</button>
         </div>
       </div>
       <div id="card-2" class="services-card right-card">
         <div class="card-title">
           <h2>Paint nights</h2>
         </div>
-        <div class="card-text">
+        <div class="service-card-text">
           <p>
-            Book a private paint party at our srudio or in your home/venue to
+            Book a private paint party at our studio or in your home/venue to
             celebrate any event such as birthdays, bacholerette parties, tea
             parties, chidren’s parties, corporate events and more!
           </p>
         </div>
         <div class="card-button">
-          <button>Learn more</button>
+          <button class="purple-button">LEARN MORE</button>
         </div>
       </div>
       <div id="card-3" class="services-card left-card">
         <div class="card-title">
           <h2>Paint kits</h2>
         </div>
-        <div class="card-text">
+        <div class="service-card-text">
           <p>
-            Book a private paint party at our srudio or in your home/venue to
+            Book a private paint party at our studio or in your home/venue to
             celebrate any event such as birthdays, bacholerette parties, tea
             parties, chidren’s parties, corporate events and more!
           </p>
         </div>
         <div class="card-button">
-          <button>Learn more</button>
+          <button class="purple-button">LEARN MORE</button>
         </div>
       </div>
     </div>
@@ -192,13 +198,15 @@
         </div>
         <div class="card-text">
           <p>
+            <i class="fas fa-quote-left"></i>
             Wonderful gift that helped me turn my attention away from work,
             clear my mind and just focus on making a beautiful painting. Very
             fun activity for everyone for everyone no matter how much or how
             little experience one has
+            <i class="fas fa-quote-right"></i>
           </p>
         </div>
-        <div class="card-text">
+        <div class="card-author">
           <p>— Nora ovtchavora</p>
         </div>
       </div>
@@ -208,13 +216,15 @@
         </div>
         <div class="card-text">
           <p>
+            <i class="fas fa-quote-left"></i>
             Wonderful gift that helped me turn my attention away from work,
             clear my mind and just focus on making a beautiful painting. Very
             fun activity for everyone for everyone no matter how much or how
             little experience one has
+            <i class="fas fa-quote-right"></i>
           </p>
         </div>
-        <div class="card-text">
+        <div class="card-author">
           <p>— Nora ovtchavora</p>
         </div>
       </div>
@@ -224,13 +234,15 @@
         </div>
         <div class="card-text">
           <p>
+            <i class="fas fa-quote-left"></i>
             Wonderful gift that helped me turn my attention away from work,
-            clear my mind and just focus on making a beautiful painting. Very
+            clear my mind and just focus on making a beautiful painting. author
             fun activity for everyone for everyone no matter how much or how
             little experience one has
+            <i class="fas fa-quote-right"></i>
           </p>
         </div>
-        <div class="card-text">
+        <div class="card-author">
           <p>—Nora ovtchavora</p>
         </div>
       </div>
@@ -258,11 +270,11 @@
   <!-- ************** READY ************************** -->
   <section class="ready">
     <div class="ready-div">
-      <div class="tilt-left">
+      <div class="ready-title tilt-left">
         <h1 class="purple-title">Ready to give it a try?</h1>
       </div>
       <div class="ready-button">
-        <button>Book now!</button>
+        <button class="purple-button">BOOK NOW!</button>
       </div>
     </div>
     <div class="ready-background">
@@ -273,7 +285,7 @@
     </div>
   </section>
     <!-- ******************  FOOTER  ******************************* -->
-    <section id="footer">
+    <section class="footer">
         <div class="footer-div" id="footer-div-1" >
             <div id="logo"></div>
         </div>
