add touch events

--- a/index.html
+++ b/index.html
@@ -307,27 +307,40 @@
   </section>
     <!-- ******************  FOOTER  ******************************* -->
     <section class="footer">
-        <div class="footer-div" id="footer-div-1" >
-            <div id="logo"></div>
-        </div>
-        <div class="footer-div" id="footer-div-2">
-            <h1>Hours</h1>
-            <p>Weekends 9AM - 8PM</p>
-            <p>Weekday 9AM - 8PM</p>
-        </div>
-        <div class="footer-div" id="footer-div-3">
-            <h1>Contact us</h1>
-            <div class="contact-div" >
-                <div class="icon"></div><p>(647) 390-9659</p>
-            </div>
-            <div class="contact-div" >
-                <div class="icon"></div><p>Paint.paradise.art@gmail.com</p>
+        <div class="footer-hours">
+            <div class="footer-logo"></div>
+            <div class="hours-content">
+              <div class="hours-title">
+                <h1>Business hours</h1>
+              </div>
+              <p>Weekends 9AM - 8PM</p>
+              <p>Weekday 9AM - 8PM</p>
             </div>
         </div>
-        <div class="footer-div" id="footer-div-4">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="footer-contact">
+          <div class="contact-content">
+            <div class="contact-title">
+              <h1>Contact us</h1>
+            </div>
+            <div class="contact-div" >
+              <div class="footer-icon"><a href=""><img src="images/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
+          </div>
+            <div class="contact-div" >
+              <div class="footer-icon"><a href=""><img src="images/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="footer-social">
+          <div class="social-content">
+            <div class="social-title">
+              <h1>Social</h1>
+            </div>
+            <div class="social-icons">
+              <div class="footer-icon"><a href=""><img src="images/facebook-icon.png" alt="facebook-icon"></a></div>
+              <div class="footer-icon"><a href=""><img src="images/instagram-icon.png" alt="instagram-icon"></a></div>
+              <div class="footer-icon"><a href=""><img src="images/tiktok-icon.png" alt="tiktok-icon"></a></div>
+            </div>
+          </div>
         </div>
     </section>
 
