--- a/index.html
+++ b/index.html
@@ -38,17 +38,32 @@
                     <div class="drop-down-menu">
                       <div class="drop-down-link-wrap">
                         <div class="drop-down-link">
-                            <div class="drop-down-icon"></div>
+                            <div class="drop-down-icon">
+                              <div class="icon-inner">
+                                <div class="icon-front"></div>
+                                <div class="icon-back"></div>
+                              </div>
+                              </div>
                             <h3>Private Paint Parties</h3>
                         </div>
                         <hr class="menu-divider">
                         <div class="drop-down-link">
-                            <div class="drop-down-icon"></div>
+                            <div class="drop-down-icon">
+                              <div class="icon-inner">
+                                <div class="icon-front"></div>
+                                <div class="icon-back"></div>
+                              </div>
+                              </div>
                             <h3>Paint Nights</h3> 
                         </div>
                         <hr class="menu-divider">
                         <div class="drop-down-link">
-                            <div class="drop-down-icon"></div>
+                            <div class="drop-down-icon">
+                              <div class="icon-inner">
+                                <div class="icon-front"></div>
+                                <div class="icon-back"></div>
+                              </div>
+                              </div>
                             <h3>Paint Kits</h3>
                         </div>
                       </div>
