started about page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     src="https://kit.fontawesome.com/da7d263600.js"
     crossorigin="anonymous"
   ></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <!-- ***************  NAVBAR  ******************* -->
@@ -29,10 +29,10 @@
         </div>
         <div class="collapsed-nav">
             <div class="nav-links">
-                <div class="nav-link"><h2>Home</h2></div>
+                <div class="nav-link"><h2><a href="index.html">Home</a></h2></div>
                 <div id="services-drop-down" class="nav-link">
                     <div class="services-nav-link">
-                        <h2>Services</h2>
+                        <h2><a href="services.html">Services</a></h2>
                         <i class="fas fa-chevron-up"></i>
                     </div>
                     <div class="drop-down-menu">
@@ -69,8 +69,8 @@
                       </div>
                     </div>
                 </div>
-                <div class="nav-link"><h2>About</h2></div>
-                <div class="nav-link"><h2>Gallery</h2></div>
+                <div class="nav-link"><h2><a href="about.html">About</a></h2></div>
+                <div class="nav-link"><h2><a href="gallery.html">Gallery</a></h2></div>
             </div>
         </div>
     </div>
@@ -360,6 +360,6 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
