--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         </div>
         <div class="about-heading-text">
             <div class="about-heading-text-title">
-                <h4 class="purple-title">The founder</h4>
+                <h2 class="purple-title">The founder</h2>
             </div>
             <div>
                 <p class="font-medium">Mahsa Azimi, visual artist,</p>
@@ -102,14 +102,16 @@
         </div>
         <div class="instagram-carousel">
           <div class="instagram-carousel-inner">
-            <div class="instagram-carousel-inner-item"></div>
-            <div class="instagram-carousel-inner-item"></div>
-            <div class="instagram-carousel-inner-item"></div>
-            <div class="instagram-carousel-inner-item"></div>
-            <div class="instagram-carousel-inner-item"></div>
+            <div class="instagram-carousel-items">
+              <div class="instagram-carousel-items-item">1</div>
+              <div class="instagram-carousel-items-item">2</div>
+              <div class="instagram-carousel-items-item">3</div>
+              <div class="instagram-carousel-items-item">4</div>
+              <div class="instagram-carousel-items-item">5</div>
+            </div>
           </div>
           <div class="controls">
-            <div class="selectors test-selectors">
+            <div class="selectors instagram-selectors">
               <div class="selector-active"></div>
               <div></div>
               <div></div>
@@ -117,12 +119,12 @@
               <div></div>
             </div>
             <div class="arrows">
-              <div class="arrow-left test-prev-btn">
+              <div class="arrow-left instagram-prev-btn">
                 <div class="arrow-left-1"></div>
                 <div class="arrow-left-2"></div>
                 <div class="arrow-left-3"></div>
               </div>
-              <div class="arrow-right test-next-btn">
+              <div class="arrow-right instagram-next-btn">
                 <div class="arrow-right-1"></div>
                 <div class="arrow-right-2"></div>
                 <div class="arrow-right-3"></div>
@@ -180,6 +182,6 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/about.js"></script>
 </body>
 </html>
